# tuntap

./: .gitignore  Cargo.toml  LICENSE  README.adoc  README.md  build.gradle  build.rs  pom.xml  settings.gradle
.github/workflows/: development.yml
gradle/: codeCoverage.gradle  configure.gradle
src/c/: tuntap.c
src/java/tuntap/: Buffer.java  Interface.java  Service.java
src/java/tuntap/api/: TunTapInterface.java  TunTapService.java
src/java/tuntap/api/buffer/: DirectBuffer.java
src/java/tuntap/api/foreign/: Unsafe.java  ctl_info.java  ifmap.java  ifreq.java  sockaddr.java
src/java/tuntap/api/foreign/constant/: Ifreq.java  Ioctl.java  Socket.java  SysDomain.java  Tun.java  UTun.java
src/java/tuntap/api/option/: TunTapOption.java
src/rust/: lib.rs
test/java/tuntap/api/: TunTapInterfaceTest.java
test/rust/: main.rs
tuntap-api/src/main/java/: module-info.java
tuntap-api/src/main/java/tuntap/api/: TunTap.java
tuntap-api/src/main/java/tuntap/spi/: Tap.java  Tun.java
tuntap-common/: build.gradle
tuntap-jdk8/: build.gradle
tuntap-jdk8/src/main/java/tuntap/jdk8/: Unsafe.java
tuntap-linux/: build.gradle
tuntap-linux/src/main/java/tuntap/linux/: DatagramPair.java  LinuxJNRAbstractDevice.java  LinuxJNRAbstractInterface.java  LinuxJNRBuffer.java  (+13 more)
tuntap-macos/: build.gradle
tuntap-spi/: build.gradle
tuntap-spi/src/main/java/: module-info.java
tuntap-spi/src/main/java/tuntap/: Buffer.java  Device.java  Interface.java  InterfaceMode.java  InterfaceOptions.java  Pair.java  Selector.java  Service.java  Socket.java
tuntap-tests/: build.gradle
(+114 files in other folders)
